--- a/ia/conceptos.html
+++ b/ia/conceptos.html
@@ -38,8 +38,8 @@
             <div class="text__articulo-cover">
                 <h1>Conceptos clave del Deep Learning</h1>
                 <p>El mundo del Deep Learning puede parecer complejo, pero detrás de su apariencia hay conceptos fundamentales que son esenciales para entender cómo las máquinas aprenden y procesan información. Aquí, te sumergiremos más profundamente en estos conceptos, proporcionando explicaciones detalladas y ejemplos sencillos:</p>
-                <h2>Pesos (weights)</h2>
-                <p>Los pesos son valores numéricos asignados a las conexiones entre las neuronas en una red neuronal. Cada conexión entre dos neuronas tiene un peso asociado. Estos pesos determinan la influencia relativa de las entradas en el cálculo de la salida de una neurona. Cuando una señal se propaga a través de la red neuronal, se multiplica por los pesos correspondientes en las conexiones.</p>
+                <h2>Pesos</h2>
+                <p>Los pesos (weights) son valores numéricos asignados a las conexiones entre las neuronas en una red neuronal. Cada conexión entre dos neuronas tiene un peso asociado. Estos pesos determinan la influencia relativa de las entradas en el cálculo de la salida de una neurona. Cuando una señal se propaga a través de la red neuronal, se multiplica por los pesos correspondientes en las conexiones.</p>
                 <p>Imagina que estás entrenando una red neuronal para reconocer dígitos escritos a mano. Cada peso puede verse como una medida de cuán importante es cierta característica (como la curva de un dígito) para tomar una decisión sobre el número representado en la imagen. Durante el entrenamiento, los pesos se ajustan para que la red aprenda a dar más peso a las características relevantes y menos peso a las que no lo son.</p>
                 <h2>Perceptrón: La Unidad Básica</h2>
                 <p>El perceptrón es como un pequeño ladrillo en la construcción de un edificio de inteligencia artificial. Piensa en él como una neurona artificial que recibe entradas, las multiplica por ciertos pesos y produce una salida. Por ejemplo, si estuviéramos enseñando a una red neuronal a diferenciar entre manzanas y naranjas, un perceptrón podría evaluar características como color y forma para hacer una predicción.</p>
@@ -169,10 +169,10 @@
                 <p>En las redes neuronales convolucionales (CNN), la convolución se utiliza para extraer características relevantes de las imágenes. Los filtros (kernels) se aplican a la imagen de entrada mediante operaciones de convolución en diferentes capas. A medida que los filtros se desplazan sobre la imagen, detectan patrones y características específicas, como bordes, texturas y formas. Estas características se convierten en mapas de características que luego se utilizan para la clasificación, detección de objetos u otras tareas.</p>
                 <p>La convolución y el uso de kernels en CNN permiten a las redes neuronales aprender representaciones jerárquicas de características en las imágenes, lo que ha demostrado ser altamente efectivo para una variedad de tareas de visión por computadora, como el reconocimiento de objetos, segmentación de imágenes y más.</p>
                 <p>Ejemplo: Si estás buscando características en una imagen, como bordes, el kernel sería como una pequeña ventana que se desliza por la imagen, resaltando las áreas donde los bordes son más pronunciados.</p>
-                <p>En resumen, estos conceptos, aunque suenan complejos, son los bloques de construcción que permiten a las máquinas aprender, razonar y tomar decisiones. Piensa en ellos como piezas de un rompecabezas gigante que, cuando se ensamblan, crean una imagen clara de cómo las máquinas pueden comprender y procesar información de manera sorprendentemente similar a nosotros.</p>
                 <div class="blog-image-grande">
                     <img src="media/concepto10.png" alt="">
                 </div>
+                <p>En resumen, estos conceptos, aunque suenan complejos, son los bloques de construcción que permiten a las máquinas aprender, razonar y tomar decisiones. Piensa en ellos como piezas de un rompecabezas gigante que, cuando se ensamblan, crean una imagen clara de cómo las máquinas pueden comprender y procesar información de manera sorprendentemente similar a nosotros.</p>
                 <br>
                 <br>
             </div>   
