--- a/network.html
+++ b/network.html
@@ -73,6 +73,10 @@
             <img src="media/imagen2.png" alt="ARP" class="article-image">
             <h2><a href="network/arp.html">ARP</a></h2>
         </div>   
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Modelo OSI" class="article-image">
+            <h2><a href="network/osi.html">Modelo OSI</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
