--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -7,6 +7,7 @@
     <title>Blog de Tecnología</title>
     <script src="https://kit.fontawesome.com/9474e300a6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilos-articulo.css">
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 </head>
 <body>
 
@@ -62,8 +63,21 @@
                     <p>     μ₀ = Permeabilidad del espacio libre (valor constante, aproximadamente 4π x 10^-7 H/m)</p>
                     <p>     N = Número de vueltas de la bobina</p>
                     <p>     A = Área de la sección transversal de la bobina en metros cuadrados (m²)</p>
+                    <p>     d = diametro de la sección transversal</p>
                     <p>     l = Longitud de la bobina en metros (m)</p>
                 </center>
+                <center>
+                    <p>Donde:</p>
+                    <p>     l = 100 mm</p>
+                    <p>     d = 4 mm</p>
+                    <p>     N = 100</p>
+                    <p>     \( \mu \) = 4x10<sup>-7</sup></p>
+                </center>
+                <p>Ejemplo de cálculo de inductancia: Encuentre la inductancia de la bobina de núcleo de aire.</p>
+                <p>A = &#960;(2x10<sup>-3</sup>)<sup>2</sup> = 12.57x10<sup>-6</sup></p>
+                <p>L = \( \frac{N^{2} \mu A}{l} \)</p>
+                <p>L = \( \frac {(100)^{2}(4x10^{-7})(12.57x10^{-6})}{0.1} \)</p>
+                <p>L = 1.58x10<sup>-6</sup></p>
                 <br>
                 <h2>Características</h2>
                 <ul style="list-style-type: circle;">
