--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -65,15 +65,14 @@
                     <p>     A = Área de la sección transversal de la bobina en metros cuadrados (m²)</p>
                     <p>     d = diametro de la sección transversal</p>
                     <p>     l = Longitud de la bobina en metros (m)</p>
-                </center>
-                <center>
-                    <p>Donde:</p>
-                    <p>     l = 100 mm</p>
-                    <p>     d = 4 mm</p>
-                    <p>     N = 100</p>
-                    <p>     \( \mu \) = 4x10<sup>-7</sup></p>
-                </center>
+                </center>    
                 <p>Ejemplo de cálculo de inductancia: Encuentre la inductancia de la bobina de núcleo de aire.</p>
+                    <ul>
+                        <li>     l = 100 mm</li>
+                        <li>     d = 4 mm</li>
+                        <li>     N = 100</li>
+                        <li>     \( \mu \) = 4x10<sup>-7</sup></li>
+                    </ul>
                 <p>A = &#960;(2x10<sup>-3</sup>)<sup>2</sup> = 12.57x10<sup>-6</sup></p>
                 <p>L = \( \frac{N^{2} \mu A}{l} \)</p>
                 <p>L = \( \frac {(100)^{2}(4x10^{-7})(12.57x10^{-6})}{0.1} \)</p>
