--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -66,7 +66,7 @@
                     <p>     d = diametro de la sección transversal</p>
                     <p>     l = Longitud de la bobina en metros (m)</p>
                 </center>    
-                <p>Ejemplo de cálculo de inductancia: Encuentre la inductancia de una bobina de núcleo de aire con un área de la sección transversal (A): 4π mm², 100 vueltas y una longitud de 100 mm.</p>
+                <p>Ejemplo de cálculo de inductancia: Encuentre la inductancia de una bobina de núcleo de aire con un área de la sección transversal de 4π mm², 100 vueltas y una longitud de 100 mm.</p>
                 <p>A = &#960;(2x10<sup>-3</sup>)<sup>2</sup> = 12.57x10<sup>-6</sup></p>
                 <p>L = \( \frac{N^{2} \mu A}{l} \)</p>
                 <p>L = \( \frac {(100)^{2}(4x10^{-7})(12.57x10^{-6})}{0.1} \)</p>
