--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -154,7 +154,7 @@
                 </ul>
                 <br>
                 <p>Al instalar Linux en una partición, puedes tener ambos sistemas operativos en la misma máquina. Esto te permite aprovechar los beneficios de ambos mundos y alternar entre ellos según tus necesidades.</p>
-                <p>Al instalar Linux, asegúrate de seleccionar la opción de instalación adecuada (por ejemplo, "Instalar junto a Windows" o "Otro" según la distribución). Si no tienes cuidado, podrías sobrescribir Windows y perder tus datos.</p>
+                <p>Asegúrate de seleccionar la opción de instalación adecuada (por ejemplo, "Instalar junto a Windows" o "Otro" según la distribución). Si no tienes cuidado, podrías sobrescribir Windows y perder tus datos.</p>
                 <p>En resumen, la elección entre máquinas virtuales, particiones de disco y en USB booteable depende de tus necesidades y preferencias. Las máquinas virtuales son ideales para experimentar de manera segura, mientras que las particiones de disco ofrecen un rendimiento óptimo. Los USB booteables son convenientes para probar Linux y pueden ser una forma eficiente de instalación.</p>
                 <br>
                 <br>
