--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -463,7 +463,7 @@
                 <p>P<sub>R1</sub> = (0.302)<sup>2</sup> (20)</p>
                 <p>P<sub>R1</sub> = 1.82 W</p>
                 <h2>Nodos 2</h2>
-                <div class="blog-image-grande">
+                <div class="blog-image-gabout:blankrande">
                     <img src="media/calculo7-2.png" alt="">
                 </div>
                 <p>En el siguiente circuito, las corrientes que fluyen van en sentido contrario con respecto al nodo B, ya que las fuentes de voltaje están conectadas en sentidos contrarios.</p>
@@ -472,7 +472,7 @@
                 <p>-I<sub>1</sub> + I<sub>2</sub> - I<sub>3</sub> = 0</p>
                 <p>-VA = I<sub>1</sub>(R1) - VB</p>
                 <p>VC = I<sub>2</sub>(R2) + VB</p>
-                <p>VB = I<sub>3</sub>(R3) - VD</p>
+                <p>VB = I<sub>3</sub>(R3) + VD</p>
                 <p>Para calcular la intensidad, sirve tomar como referencia el voltaje mayor como positivo en la ecuación y el voltaje de menor valor como negativo.</p>
                 <p>I<sub>1</sub> = \( \frac{VB - VA}{R1} \) = \( \frac{VB - (-6V)}{6} \)</p>
                 <p>I<sub>1</sub> = \( \frac{VB}{6} \) + \( \frac{6V}{6} \) = \( \frac{VB}{6} \) + 1A</p>
