--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -463,7 +463,7 @@
                 <p>P<sub>R1</sub> = (0.302)<sup>2</sup> (20)</p>
                 <p>P<sub>R1</sub> = 1.82 W</p>
                 <h2>Nodos 2</h2>
-                <div class="blog-image-gabout:blankrande">
+                <div class="blog-image-grande">
                     <img src="media/calculo7-2.png" alt="">
                 </div>
                 <p>En el siguiente circuito, las corrientes que fluyen van en sentido contrario con respecto al nodo B, ya que las fuentes de voltaje están conectadas en sentidos contrarios.</p>
