--- a/electronica.html
+++ b/electronica.html
@@ -57,6 +57,10 @@
             <img src="media/imagen1.png" alt="Cálculo de componentes electrónicos" class="article-image">
             <h2><a href="electronica/calculo.html">Cálculo de Componentes Electrónicos</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Diodo" class="article-image">
+            <h2><a href="electronica/diodo.html">Diodo</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="En proceso" class="article-image">
