--- a/network.html
+++ b/network.html
@@ -77,6 +77,10 @@
             <img src="media/imagen2.png" alt="Modelo OSI" class="article-image">
             <h2><a href="network/osi.html">Modelo OSI</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="IPv4" class="article-image">
+            <h2><a href="network/ipv4.html"><Input:btn>IPv4</Input:btn></a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
