--- a/hacking.html
+++ b/hacking.html
@@ -52,7 +52,11 @@
         <div class="article-section">
             <img src="media/imagen4.png" alt="Directorios del Sistema en Linux" class="article-image">
             <h2><a href="hacking/linux2.html">Directorios del Sistema en Linux</a></h2>
-        </div>  
+        </div>
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Expresiones Regulares en Linux" class="article-image">
+            <h2><a href="hacking/expresiones.html">Expresiones Regulares en Linux</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
